--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.material:material:1.2.0-alpha06'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.github.smarteist:autoimageslider:1.3.2'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 }
