--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,22 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@drawable/icon4apl"
         android:label="@string/app_name"
         android:roundIcon="@drawable/icon4apl"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Dashboard"
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true">
+        <activity android:name=".Add_Proyek"
+            android:label="Buat Proyek"
+            android:parentActivityName=".Dashboard"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
             ></activity>
+        <activity
+            android:name=".Dashboard"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
