--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,21 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Add_Proyek"
+
+        <activity android:name=".Perhitunganbidang"
+            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".Tambahbidang"
+            android:label="Tambah Bidang"
+            android:parentActivityName=".Perhitunganbidang"
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"/>
+
+        <activity android:name=".MenuProyek" />
+        <activity android:name=".Edit_Proyek" />
+        <activity
+            android:name=".Add_Proyek"
             android:label="Buat Proyek"
             android:parentActivityName=".Dashboard"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
-            ></activity>
+            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
         <activity
             android:name=".Dashboard"
             android:label="@string/app_name"
