--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Tambahurugan"></activity>
-        <activity android:name=".Tambahlantai" />
-        <activity android:name=".Tambahacian" />
-        <activity android:name=".Tambahplesteran" />
+        <activity android:name=".Editbidang"></activity>
+        <activity
+            android:name=".Tambahurugan"
+            android:label="Tambah Urugan"
+            android:theme="@style/AppTheme.NoActionBarperhitungan"></activity>
+        <activity
+            android:name=".Tambahlantai"
+            android:label="Tambah Lantai"
+            android:theme="@style/AppTheme.NoActionBarperhitungan" />
+        <activity
+            android:name=".Tambahacian"
+            android:label="Tambah Acian"
+            android:theme="@style/AppTheme.NoActionBarperhitungan" />
+        <activity
+            android:name=".Tambahplesteran"
+            android:label="Tambah Plesteran"
+            android:theme="@style/AppTheme.NoActionBarperhitungan" />
         <activity android:name=".Perhitunganurugan" />
         <activity android:name=".Perhitunganlantai" />
         <activity android:name=".Perhitunganacian" />
@@ -24,12 +37,12 @@
         <activity android:name=".Panduanapl" />
         <activity
             android:name=".Perhitunganbidang"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBarperhitungan" />
         <activity
             android:name=".Tambahbidang"
             android:label="Tambah Bidang"
             android:parentActivityName=".Perhitunganbidang"
-            android:theme="@style/Theme.AppCompat.Light.DarkActionBar" />
+            android:theme="@style/AppTheme.NoActionBarperhitungan" />
         <activity android:name=".MenuProyek" />
         <activity android:name=".Edit_Proyek" />
         <activity
